--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-html{
+html, body {
   height: 100%;
   width: 100%;
   margin: 0;
@@ -9,17 +9,20 @@ html{
   display: none;
 }
 
-#container{
-
+#container {
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
-#character{
+#character {
   width: 10px;
   height: 10px;
   background-color: red;
-  position:absolute;
-  left:50%;
+  position: absolute;
+  left: 50%;
   top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 #map{
